Closed Bug 1706167 Opened 3 years ago Closed 3 years ago

Holding down Back button, the Back button's page titles are wrong (Fission no-bfcache, SHIP only?)

Categories

(Core :: DOM: Navigation, defect, P3)

defect

Tracking

()

RESOLVED FIXED
91 Branch
Fission Milestone M7a
Tracking Status
firefox89 --- wontfix
firefox90 --- wontfix
firefox91 --- fixed

People

(Reporter: cpeterson, Assigned: smaug)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

Attached file history_states.html

@ Olli, do you think this history state bug needs to block Fission MVP?

When trying to reproduce bug 1704809 using its history_state.html test case, Nika noticed that the Back button's page titles are wrong with Fission SHIP only.

Bug 1704809 describes a different history state bug when bfcache is enabled: when we restore from bfcache, we don't fire popstate.

Flags: needinfo?(bugs)

Olli says this bug should block Fission M7a.

Assignee: nobody → bugs
Severity: -- → S3
Fission Milestone: ? → M7a
Flags: needinfo?(bugs)
Priority: -- → P3

oh, fun. Title becomes 1 also without Fission, but only in child process (document.title). The UI shows the original title in non-Fission.
Chrome has the same bizarre behavior as e10s.

Oh, and if you click submit again, also e10s changes the titles, which makes sense.

I think the behavior in Fission makes most sense.
E10s has the least reasonable behavior.

The change to DoNotifyPossibleTitleChange handling is needed so that we flush the pending title change
before adding a new active entry.

aUpdateEntryInSessionHistory is a bit odd name, since it is really about SHIP only. The patch isn't trying to
fix non-SHIP UI issues, but just give Fission similar behavior what Chrome has.

Status: NEW → ASSIGNED
No longer blocks: 1704809
Pushed by opettay@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/434d5ad2b9ae
don't update SessionHistoryEntry.title when doing same document navigations, r=peterv
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 91 Branch

Does this need uplift or can it ride to 91?

Flags: needinfo?(bugs)

This is an edge case and has been in a bit different way broken in non-Fission forever, so no need to uplift.

Flags: needinfo?(bugs)

(In reply to Olli Pettay [:smaug] from comment #8)

This is an edge case and has been in a bit different way broken in non-Fission forever, so no need to uplift.

In that case, setting status-firefox90=wontfix.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: