Bug 1706167, don't update SessionHistoryEntry.title when doing same document navigations, r=peterv

The change to DoNotifyPossibleTitleChange handling is needed so that we flush the pending title change
before adding a new active entry.

aUpdateEntryInSessionHistory is a bit odd name, since it is really about SHIP only. The patch isn't trying to
fix non-SHIP UI issues, but just give Fission similar behavior what Chrome has.

Differential Revision: https://phabricator.services.mozilla.com/D116504